# datadev

./: .dockerignore  .env.template  .gitignore  .prettierrc  CHANGELOG.md  Dockerfile  Dockerfile.jupyter  Makefile  README.md  TODO.md  build-environment.yml  docker-compose.yaml  environment.yml  index.qmd  jupyter-lite.json  mkdocs.yml  nb.md  nb.py  overrides.json  pyproject.toml  pyrefly.toml  requirements.txt  tree.txt
.devcontainer/: devcontainer.json
.github/instructions/: system.instructions.md
.github/workflows/: deploy-jupyterlite.yml  deploy.yml  publish-pages.yml  release.yml
config/grafana/: grafana_datasources.yaml
config/grafana/dashboards/: evidently-taxi-trip-duration.json
config/jupyterlite/: build-environment.yml  environment.yml  jupyter_lite_config.json  overrides.json  overrides.json.bak
content/: duckdb-wasm.ipynb  transformers.ipynb  webllm.ipynb
content/js/: duckdb-wasm.ipynb
content/jupytext/: jupytext.md
content/py/: python-js-html-magic.ipynb  transformers-js-py.ipynb
content/pyodide/: duckdb-pyodide.ipynb  pyodide-files.ipynb
content/python/: lists.ipynb  pyodide-http-patch.ipynb
content/python/d3_magic/: d3_magic.ipynb  d3_magic.py
content/python/essentials/: classes_and_objects.ipynb  dictionaries.ipynb  functions.ipynb  iterators.ipynb  lists.ipynb  sets.ipynb
docker/: Dockerfile
docs/: ai-agents.md  ai-professions.md  crisp-dm.md  data-engineering-acid.md  data-engineering-data-lake-layers.md  data-engineering-data-layers.md  data-engineering-data-sources.md  data-engineering-data-storage-solutions.md  data-engineering-databases.md  data-engineering-etl.md  data-engineering-properties-of-data.md  data-engineering-relational-databases.md  data-engineering-sql-comands.md  data-engineering-types-of-data.md  docker.md  index.md  llm-basics.md  llm-embeddings.md  llm-evals.md  llm-mcp.md  llm-rag.md  llm-transformers.md  llmops.md  ml-algorithms-factorization-machines.md  ml-algorithms-k-means.md  ml-algorithms-knn.md  ml-algorithms-lightgbm.md  ml-algorithms-tf-idf.md  ml-algorithms-xgboost.md  ml-cloud-aws-sagemaker.md  ml-cloud-aws-services.md  ml-confusion-matrix.md  ml-cross-validation-kfold.md  ml-deep-learning-activation-functions.md  ml-deep-learning-cnn.md  ml-deep-learning-rnn.md  ml-deep-learning-tunning.md  ml-design-principles.md  ml-drift.md  ml-ensemble-methods.md  (+43 more)
docs/blog/: .authors.yml
docs/blog/posts/: hello-world.md
docs/css/: styles.css
docs/templates/: jupyter.md.j2
jupyterlite/: environment.yml  jupyter-lite.json
localstack/: init-aws.sh
notebooks/docs/: ai.md  flashcards.md
notebooks/js/: charts.ipynb
notebooks/node/: deno.ipynb
notebooks/p5js/: two-sum-p5.js
notebooks/pyodide/: boto3.ipynb  fastapi.ipynb  flask.ipynb  lambda.ipynb
notebooks/python/data-analysis/: altair.ipynb  duckdb.ipynb  matplotlib.ipynb  numpy.ipynb  pandas.ipynb  seaborn.ipynb
notebooks/python/data-engineering/: spark.ipynb
notebooks/python/data-structures-algorithms/: binary-search-tree.ipynb  binary-search.ipynb  binary-tree.ipynb  dictionaries-hashmaps.ipynb  doubly-linked-lists.ipynb  graphs.ipynb  heaps-priority-queues.ipynb  lists-stacks.ipynb  queues.ipynb  recursion.ipynb  sorting.ipynb  (+1 more)
notebooks/python/mlops/deployment-fastapi-churn-prediction-mlflow/app/: main.py  pyproject.toml  train.py
notebooks/python/mlops/monitoring-taxi-drive-duration/app/: pyproject.toml
notebooks/typescript/: deno.ipynb
scripts/: entrypoint.sh  ipynb_to_md.py  setup_uv_kernel.py
templates/: jinja bak.j2  jupyter.md.j2
(+160 files in other folders)
