[project]
name = "datadev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[dependency-groups]
dev = [
    "mkdocs-jupyter",
    "mkdocs-vegalite",
    "ipynb>=0.5.1",
    "mkdocs-material>=9.6.18",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
]

[tool.uv.sources]
mkdocs-jupyter = { workspace = true }
mkdocs-vegalite = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
