[project]
name = "datadev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[dependency-groups]
dev = [
    "mkdocs-jupyter",
    "mkdocs-vegalite",
    "ipynb>=0.5.1",
    "mkdocs-material>=9.6.18",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "jupyterlab>=4.5.0",
]

[tool.uv.sources]
mkdocs-jupyter = { workspace = true }
mkdocs-vegalite = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]

build_command = ""

branch = "main"
upload_to_vcs_release = true
upload_to_pypi = false
upload_to_repository = false

changelog_file = "CHANGELOG.md"
changelog_placeholder = "<!--next-version-placeholder-->"

commit_parser = "conventional"

# Allow major version bumps even when version is 0.x.x
major_on_zero = true
tag_format = "v{version}"

# Don't track version in any Python source files
version_variables = []