[project]
name = "datadev"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[dependency-groups]
dev = [
    "mkdocs-jupyter",
    "mkdocs-vegalite",
    "ipynb>=0.5.1",
    "mkdocs-material>=9.6.18",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "jupyterlab>=4.5.0",
]

[tool.uv.sources]
mkdocs-jupyter = { workspace = true }
mkdocs-vegalite = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.semantic_release]
branch = "main"
commit_parser = "conventional"
major_on_zero = true
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
upload_to_vcs_release = true
upload_to_pypi = false
upload_to_repository = false

[tool.semantic_release.version]
source = "toml"

[tool.semantic_release.version.toml]
path = "pyproject.toml"
field = "project.version"

[tool.semantic_release.changelog]
template = "default"