[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.28",
    "fastapi>=0.128.0",
    "mlflow==3.7.0",
    "numpy==2.3.2",
    "pandas==2.3.2",
    "scikit-learn==1.7.1",
    "uvicorn>=0.40.0",
]
