[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.7.20",
    "joblib>=1.5.3",
    "mlflow==3.7.0",
    "numpy==2.3.2",
    "pandas==2.3.2",
    "pandas-stubs==2.3.2.250827",
    "prefect>=3.6.11",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "pyarrow==22.0.0",
    "requests>=2.32.5",
    "scikit-learn==1.7.1",
    "tqdm>=4.67.1",
    "xgboost==3.1.2",
]
